# gn-project

./: .gn  BUILD.gn
test/: BUILD.gn  WindowsProject1.rc  hello_world.cc  resource.h
test/earthrise/: earthrise_update.cc  earthrise_update.h  hello.xml
